# QMLTest

./: .gitignore  CMakeLists.txt  CMakeLists.txt.qtds  CMakeLists.txt.user.109d9c5  CMakeLists.txt.user.3730602  README.md  Settings.cpp  Sneed.qmlproject  Sneed.qmlproject.qtds  qds.cmake
.github/workflows/: build.yml  trigger_release.yml
App/: CMakeLists.txt  main.cpp
App/autogen/: environment.h
OFPContent/: App.qml
OFPContent/exercise/: ExerciseForm.ui.qml  ExercisePageForm.ui.qml  ExerciseSetForm.ui.qml
OFPContent/food/: FoodPageForm.ui.qml  FoodSearchForm.ui.qml  FoodServingEditForm.ui.qml  FoodServingInfoForm.ui.qml  MealLogForm.ui.qml
OFPContent/goals/: GoalsPageForm.ui.qml
OFPContent/recipes/: RecipeAddForm.ui.qml  (+3 more)
OFPData/: CMakeLists.txt
OpenFitnessPal/: CMakeLists.txt
Sneed/: CMakeLists.txt  Constants.qml  DirectoryFontLoader.qml  qmldir
SneedContent/: App.qml  CMakeLists.txt  DateSelect.qml  DoubleSpinBox.qml  Exercise.qml  ExerciseForm.ui.qml  ExerciseImpl.qml  ExerciseImpl.qml.autosave  ExercisePage.qml  ExercisePage.ui.qml  ExercisePageForm.ui.qml  ExercisePageImpl.qml  ExerciseSet.qml  ExerciseSetForm.ui.qml  ExerciseSetImpl.qml  FoodPageForm.ui.qml  FoodSearchForm.ui.qml  FoodSearchImpl.qml  FoodServingEditForm.ui.qml  FoodServingEditImpl.qml  GoalsPageForm.ui.qml  MealLogForm.ui.qml  MealLogImpl.qml  RecipesPageForm.ui.qml  Screen01.ui.qml  Screen02.ui.qml  SettingsPage.ui.qml
cmake/: qmlcomponents.cmake
include/: ExerciseListModel.h  ExerciseSetsModel.h  Recipe.h
program_info/: CMakeLists.txt  genicons.sh
src/: ExerciseListModel.cpp  ExerciseSetsModel.cpp  Recipe.cpp  Settings.cpp
(+43 files in other folders)
